bin_PROGRAMS = phastinput

phastinput_SOURCES=\
	accumulate.cpp\
	ArcRaster.cpp\
	ArcRaster.h\
	BC_info.cpp\
	BC_info.h\
	check.cpp\
	Cube.cpp\
	Cube.h\
	Data_source.cpp\
	Data_source.h\
	Domain.cpp\
	Domain.h\
	Drain.cpp\
	Drain.h\
	Exterior_cell.cpp\
	Exterior_cell.h\
	Filedata.cpp\
	Filedata.h\
	FromPhreeqc/Keywords.cpp\
	FromPhreeqc/Keywords.h\
	FromPhreeqc/Parser.cxx\
	FromPhreeqc/Parser.h\
	FromPhreeqc/PHRQ_base.cxx\
	FromPhreeqc/PHRQ_base.h\
	FromPhreeqc/PHRQ_io.cpp\
	FromPhreeqc/PHRQ_io.h\
	FromPhreeqc/phrqtype.h\
	FromPhreeqc/Utils.cxx\
	FromPhreeqc/Utils.h\
	gpc.cpp\
	gpc.h\
	gpc_helper.cpp\
	gpc_helper.h\
	hstinpt.h\
	index_range.h\
	inputproto.h\
	KDtree/Cell_Face.h\
	KDtree/KDtree.cpp\
	KDtree/KDtree.h\
	KDtree/kdtree2.cpp\
	KDtree/kdtree2.hpp\
	KDtree/Point.cpp\
	KDtree/Point.h\
	main.cpp\
	message.cpp\
	message.h\
	Mix.h\
	NNInterpolator/config.h\
	NNInterpolator/delaunay.c\
	NNInterpolator/delaunay.h\
	NNInterpolator/hash.c\
	NNInterpolator/hash.h\
	NNInterpolator/istack.c\
	NNInterpolator/istack.h\
	NNInterpolator/lpi.c\
	NNInterpolator/minell.c\
	NNInterpolator/minell.h\
	NNInterpolator/nan.h\
	NNInterpolator/nn.h\
	NNInterpolator/nnai.c\
	NNInterpolator/nncommon-vulnerable.c\
	NNInterpolator/nncommon.c\
	NNInterpolator/NNInterpolator.cpp\
	NNInterpolator/NNInterpolator.h\
	NNInterpolator/nnpi.c\
	NNInterpolator/nn_internal.h\
	NNInterpolator/preader.c\
	NNInterpolator/preader.h\
	NNInterpolator/triangle.c\
	NNInterpolator/triangle.h\
	NNInterpolator/version.h\
	PHAST_polygon.cpp\
	PHAST_polygon.h\
	PHAST_Transform.cpp\
	PHAST_Transform.h\
	Polygon_tree.cpp\
	Polygon_tree.h\
	Polyhedron.cpp\
	Polyhedron.h\
	Prism.cpp\
	Prism.h\
	property.h\
	read.cpp\
	River.h\
	rivers.cpp\
	Shapefiles/dbfopen.c\
	Shapefiles/shapefil.h\
	Shapefiles/Shapefile.cpp\
	Shapefiles/Shapefile.h\
	Shapefiles/shpopen.c\
	Shapefiles/shptree.c\
	structures.cpp\
	tailor.h\
	time.cpp\
	timepi.h\
	UniqueMap.h\
	units_impl.cxx\
	unit_impl.cxx\
	unit_impl.h\
	utilities.cpp\
	Utilities.h\
	Wedge.cpp\
	Wedge.h\
	wells.cpp\
	wphast.h\
	write.cpp\
	XYZfile.cpp\
	XYZfile.h\
	XYZTfile.cpp\
	XYZTfile.h\
	zone.cpp\
	zone.h\
	Zone_budget.cpp\
	Zone_budget.h	

COMPILE = $(CXXCOMPILE)
LTCOMPILE = $(LTCXXCOMPILE)
