AM_CPPFLAGS=-I$(srcdir)/PhastKeywords

bin_PROGRAMS = phastinput

BUILT_SOURCES=\
	PhastKeywords/Parser.cxx\
	PhastKeywords/Parser.h\
	PhastKeywords/PHRQ_base.cxx\
	PhastKeywords/PHRQ_base.h\
	PhastKeywords/PHRQ_io.h\
	PhastKeywords/PHRQ_io.cpp\
	PhastKeywords/phrqtype.h\
	PhastKeywords/Utils.cxx\
	PhastKeywords/Utils.h

phastinput_SOURCES=\
	accumulate.cpp\
	ArcRaster.cpp\
	ArcRaster.h\
	BC_info.cpp\
	BC_info.h\
	check.cpp\
	Cube.cpp\
	Cube.h\
	Data_source.cpp\
	Data_source.h\
	Domain.cpp\
	Domain.h\
	Drain.cpp\
	Drain.h\
	Exterior_cell.cpp\
	Exterior_cell.h\
	Filedata.cpp\
	Filedata.h\
	gpc.cpp\
	gpc.h\
	gpc_helper.cpp\
	gpc_helper.h\
	hstinpt.h\
	index_range.h\
	inputproto.h\
	KDtree/Cell_Face.h\
	KDtree/KDtree.cpp\
	KDtree/KDtree.h\
	KDtree/kdtree2.cpp\
	KDtree/kdtree2.hpp\
	KDtree/Point.cpp\
	KDtree/Point.h\
	main.cpp\
	message.cpp\
	message.h\
	Mix.h\
	NNInterpolator/config.h\
	NNInterpolator/delaunay.c\
	NNInterpolator/delaunay.h\
	NNInterpolator/hash.c\
	NNInterpolator/hash.h\
	NNInterpolator/istack.c\
	NNInterpolator/istack.h\
	NNInterpolator/lpi.c\
	NNInterpolator/minell.c\
	NNInterpolator/minell.h\
	NNInterpolator/nan.h\
	NNInterpolator/nn.h\
	NNInterpolator/nnai.c\
	NNInterpolator/nncommon-vulnerable.c\
	NNInterpolator/nncommon.c\
	NNInterpolator/NNInterpolator.cpp\
	NNInterpolator/NNInterpolator.h\
	NNInterpolator/nnpi.c\
	NNInterpolator/nn_internal.h\
	NNInterpolator/preader.c\
	NNInterpolator/preader.h\
	NNInterpolator/triangle.c\
	NNInterpolator/triangle.h\
	NNInterpolator/version.h\
	PHAST_polygon.cpp\
	PHAST_polygon.h\
	PHAST_Transform.cpp\
	PHAST_Transform.h\
	PhastKeywords/Keywords.cpp\
	PhastKeywords/Keywords.h\
	PhastKeywords/Parser.cxx\
	PhastKeywords/Parser.h\
	PhastKeywords/PHRQ_base.cxx\
	PhastKeywords/PHRQ_base.h\
	PhastKeywords/PHRQ_io.cpp\
	PhastKeywords/PHRQ_io.h\
	PhastKeywords/phrqtype.h\
	PhastKeywords/Utils.cxx\
	PhastKeywords/Utils.h\
	Polygon_tree.cpp\
	Polygon_tree.h\
	Polyhedron.cpp\
	Polyhedron.h\
	Prism.cpp\
	Prism.h\
	property.h\
	read.cpp\
	River.h\
	rivers.cpp\
	Shapefiles/dbfopen.c\
	Shapefiles/shapefil.h\
	Shapefiles/Shapefile.cpp\
	Shapefiles/Shapefile.h\
	Shapefiles/shpopen.c\
	Shapefiles/shptree.c\
	structures.cpp\
	tailor.h\
	time.cpp\
	timepi.h\
	UniqueMap.h\
	units_impl.cxx\
	unit_impl.cxx\
	unit_impl.h\
	utilities.cpp\
	Utilities.h\
	Wedge.cpp\
	Wedge.h\
	wells.cpp\
	wphast.h\
	write.cpp\
	XYZfile.cpp\
	XYZfile.h\
	XYZTfile.cpp\
	XYZTfile.h\
	zone.cpp\
	zone.h\
	Zone_budget.cpp\
	Zone_budget.h	

COMPILE = $(CXXCOMPILE)
LTCOMPILE = $(LTCXXCOMPILE)

$(srcdir)/PhastKeywords/Parser.cxx:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/Parser.cxx .

$(srcdir)/PhastKeywords/Parser.h:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/Parser.h .

$(srcdir)/PhastKeywords/PHRQ_base.cxx:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/PHRQ_base.cxx .

$(srcdir)/PhastKeywords/PHRQ_base.h:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/PHRQ_base.h .

$(srcdir)/PhastKeywords/PHRQ_io.cpp:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/PHRQ_io.cpp .

$(srcdir)/PhastKeywords/PHRQ_io.h:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/PHRQ_io.h .

$(srcdir)/PhastKeywords/phrqtype.h:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/phrqtype.h .

$(srcdir)/PhastKeywords/Utils.cxx:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/Utils.cxx .

$(srcdir)/PhastKeywords/Utils.h:
	cd $(srcdir)/PhastKeywords && $(LN_S) ../../phast/PhreeqcRM/IPhreeqcPhast/IPhreeqc/phreeqcpp/Utils.h .
